  - Enhancement  #536 Moviejukebox Listing plugin. Creates a CSV file with information about the movies in the jukebox.
  - Fixed defect #537 Kinopoisk plugin fixes
  - Fixed defect #544 TV series episode titles in filename extend from dash to final '.'
  - Fixed defect #556 Ignores dashes before the final ']' when searching for part name
  - Fixed defect #558 Set grouping now applies to all category/genre screens
  - Fixed defect #561 Since R725 it ignored '.' as part keyword delimiter and accepted ' '; the behavior is now inverted
  - Enhancement  #231 Default skin details show TV episodes/parts list in compact form in order to avoid slow scrolling. 
  					  The episode names are shown in the dynamic status bar by selecting particular episode (like on index page). 

MovieJukebox 1.0.15 beta
------------------------
  - Enhancement   #72 Support for multi-episode files and folders
  - Enhancement   #90 Skins now have the ability to wrap around from the last index page to the first and vice versa 
  - Enhancement  #225 Improved sorting of movies (by IMdB rating and by year)
  - Enhancement  #250 So how do we customize the categories?
  - Enhancement  #254 Use XBMC tvshow nfo layout to override scraper info
  - Enhancement  #281 Support DVD order from TheTVDB.com
  - Enhancement  #331 FilmUp.it scraper (Italian Plug-In)
  - Enhancement  #343 Allowing prebuf to be set
  - Fixed defect #346 Errors on multiple part movies - empty details html file
  - Enhancement  #348 Enhanced BD-50 Disk RIP Scanner
  - Fixed defect #352 Fanart not being resized
  - Fixed defect #353 Some of the html files are not getting copied from the temp dir to the jukebox dir
  - Fixed defect #354 Jukebox clean-up doesn't handle files with no extension cleanly
  - Fixed defect #356 ForceFanartOverwrite setting doesn't work
  - Fixed defect #359 Allow either Series url or Season url in NFO for TheTVDB
  - Fixed defect #361 TV Shows with new episodes do not show in the YAMJ "new" html output