@@ -56,6 +56,7 @@ MovieJukebox 1.0.16 beta
   - Fixed defect #537 Kinopoisk plugin fixes
   - Fixed defect #544 TV series episode titles in filename extend from dash to final '.'
   - Fixed defect #556 Ignores dashes before the final ']' when searching for part name
+  - Fixed defect #557 Allocine plugin override systematically NFO information
   - Fixed defect #558 Set grouping now applies to all category/genre screens
   - Fixed defect #561 Since R725 it ignored '.' as part keyword delimiter and accepted ' '; the behavior is now inverted
   - Enhancement  #231 Default skin details show TV episodes/parts list in compact form in order to avoid slow scrolling. 
